this commit from vscode

--- a/header.html
+++ b/header.html
@@ -1,2 +1,1 @@
-This is my first git header file
-As per header requiment , I have updated content here
+This file is updated from visual studio code.
